# qemu

./: .gitignore  LICENSE  README.md  SESSION_STATUS.md  STATUS_2026-05-25_NIGHT.md  TODO.md  back.Env  bridge.py  bridge.py.bak  bridge_tmp.py  calypso.env  calypso_diag.env.merged-into-calypso-env  calypso_hack.env  cleanup_duplicates.sh  csdlm  gsm_clock.py  gsm_mod.py  hack.py  harvard.sh  hmp-commands-info.hx  hsh.py  index.html  myfiles.txt  patch10_hs.py  patch12_smtrace.py  patch14_percell.py  patch2_435b.py  patch3_imr.py  patch4_intmwin.py  patch5_irqlevel.py  patch6_bspungate.py  patch7_running.py  patch8_probe.py  patch_arm2dsp.py  qemu-to-qemu-calypso.sh  run-all-debug.sh  run-all.sh  run.sh  run.sh.bak  run_all.sh  (+7 more)
.claude/: settings.local.json
bash_scripts/: run.sh
doc/: CLAUDE_CODE_TASK.md  (+4 more)
hw/arm/calypso/: calypso_arm2dsp.c  calypso_bsp.c  calypso_c54x.c  calypso_c54x.c.bak-clean  calypso_c54x.c.bak.preF47generic.20260428  calypso_c54x.c.bak.preF7Stub.20260428  calypso_c54x.c.bak.preFixA2A3  calypso_c54x.c.bak.preFretFix  calypso_c54x.c.bak.preNoCell  calypso_c54x.c.tmp.809213.46d15be4d9a6  calypso_c54x.h  calypso_dsp_helper.c  calypso_dsp_shunt.c  calypso_dsp_shunt.h  calypso_fbsb.c  calypso_layer1.c  calypso_layer1.h  calypso_mb.c  calypso_soc.c  calypso_tint0.c  calypso_trx.c  calypso_trx.c.bak-clean  calypso_trx.c.bak.preNoCell  l1ctl_sock.c  meson.build
hw/arm/calypso/doc/: BOOT_MAP_AND_ACTIVE_BUGS_20260629.md  FB_CORRELATOR_PIPELINE.md  PROJECT_STATUS.md  SESSION_STATUS_20260629.md  TODO.md  hacks.md
hw/arm/calypso/doc/opcodes/: 0x68_0x6F.md
(+46 files in other folders)
